# jpy-datareader

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yml
examples/: estat01_statslist.ipynb  estat02_metainfo.ipynb  estat03_statsdata.ipynb  estat04_get_data_functions.ipynb  estat05.ipynb  s01.ipynb  s01_estat_statslist.ipynb  s02_estat_metainfo.ipynb  s02_estat_statsdata.ipynb  s03_estat_statsdata.ipynb  s04_fpy_datareader.ipynb  tuition.csv
jpy_datareader/: __init__.py  _utils.py  base.py  data.py  estat.py  gbizinfo.py
jpy_datareader/schemas/: estat.json
shemas/: estat.json
tests/: test_base_reader.py  test_estat.py  test_estats.py
tests/tests_estat/: test_estat_datacatalog.py  test_estat_metainfo.py  test_estat_reader.py  test_estat_statsdata.py  test_estat_statslist.py
